--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,11 +6,14 @@
       <div class="provisorio"></div>
     </div>
     <div class="icones">
-      <button class="notificacao">
+      <button class="notificacao" (click)="chamarModalNotificacao()">
         <img src="../../../assets/alarm _ notification _ message.svg" alt="">
       </button>
-      <button class="perfil">
+      <button class="perfil" (click)="chamarModalPerfil()">
         <img src="../../../assets/user _ account _ profile.svg" alt="">
+        @if(modalPefilOpen){
+          <app-modal-perfil class="modal-perfil"></app-modal-perfil>
+        }
       </button>
     </div>
   </header>
@@ -24,11 +27,29 @@
           <p>14/05 - 15:00</p>
           <button>Ver detalhes</button>
         </div>
+        <div class="evento">
+          <h4>Nome do evento</h4>
+          <p>14/05 - 15:00</p>
+          <button>Ver detalhes</button>
+        </div>
+        <div class="evento">
+          <h4>Nome do evento</h4>
+          <p>14/05 - 15:00</p>
+          <button>Ver detalhes</button>
+        </div>
+        <div class="evento">
+          <h4>Nome do evento</h4>
+          <p>14/05 - 15:00</p>
+          <button>Ver detalhes</button>
+        </div>
+      </div>
+      <div class="btn-criar">
+        <button class="criar-evento">Criar evento</button>
       </div>
     </div>
     <div class="calendar">
       <mat-calendar></mat-calendar>
     </div>
   </section>
+  
 </div>
-
