--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,11 +1,11 @@
-
-.weekend{
-  background-color: blue;
-  color: red;
-}
-.container{
-  padding: 1rem 2rem;
-  header{
+@import "../../../styles.scss";
+.container {
+  margin: 0 auto;
+  height: 100vh;
+  width: 1400px;
+  // background: rgba(238, 234, 234, 0.342);
+  padding: 1rem 2.5rem;
+  header {
     display: flex;
     justify-content: space-between;
     .container-logo {
@@ -15,33 +15,114 @@
         border: 3px solid black;
       }
     }
-    .icones{
+    .icones {
       display: flex;
       gap: 10px;
-      button{
+      button {
+        position: relative;
         cursor: pointer;
         background: none;
         border: none;
         width: 50px;
         height: 60px;
-        img{
+        img {
           width: 40px;
           height: 40px;
+        }
+        .modal-perfil {
+          &::before {
+            content: "";
+            display: block;
+            position: absolute;
+            top: -10px;
+            right: 4.5px;
+            width: 0px;
+            height: 0px;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-bottom: 10px solid #424242;
+          }
+          position: absolute;
+          top: 50px;
+          right: 10px;
         }
       }
     }
   }
-  .conteudo{
-    
+  .conteudo {
+    margin-top: 2rem;
     display: flex;
-    justify-content: space-between;
-    .eventos{
+    justify-content: start;
+    gap: 8rem;
+    width: 1200px;
+    margin: 2rem auto 0 auto;
+    .eventos {
+      padding-top: 3rem;
+      width: 280px;
 
+      // border: 2px solid black;
+      h1 {
+        font-size: 36px;
+        color: #424242;
+        padding: 4px;
+        width: 100%;
+        border-bottom: 2px solid #424242;
+      }
+      .todos-eventos {
+        padding: 10px 5px;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        overflow-y: scroll;
+        height: 350px;
+        .evento {
+          width: 257px;
+          height: 135px;
+          display: flex;
+          flex-direction: column;
+          padding: 10px;
+          justify-content: start;
+          border: 1px solid #424242;
+          margin: 0 auto;
+          h4 {
+            font-size: 24px;
+            color: #424242;
+          }
+          p {
+            font-size: 24px;
+            color: #424242;
+          }
+          button {
+            width: 152px;
+            background: none;
+            border: none;
+            text-decoration: underline;
+            margin-left: auto;
+            text-align: end;
+            font-size: 24px;
+            color: #424242;
+          }
+        }
+      }
+      .btn-criar{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .criar-evento{
+          cursor: pointer;
+          margin-top: 40px;
+          width: 159px;
+          height: 46px;
+          color: #fff;
+          background-color: #424242;
+          border: none;
+          font-size: 18px;
+        }
+      }   
     }
-    .calendar{
-      width: 620px;
-
+    .calendar {
+      width: 680px;
     }
   }
 }
-
