--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="btn-criar">
-        <button class="criar-evento">Criar evento</button>
+        <button class="criar-evento" (click)="openCriarEvento()">Criar evento</button>
       </div>
     </div>
     <div class="calendar">
