--- a/src/app/pages/registrar/registrar.component.html
+++ b/src/app/pages/registrar/registrar.component.html
@@ -1,1 +1,36 @@
-<p>registrar works!</p>
+<div class="container">
+  <div class="container-logo">
+    <!-- <img src="" alt="Logo"> -->
+    <div class="provisorio"></div>
+    <h1>Dayify</h1>
+  </div>
+  <div class="container-cadastro">
+    <h1 class="titulo">Cadastro</h1>
+    <form [formGroup]="formRegistrar">
+      <div class="input-container">
+        <label>Nome de usuário</label>
+        <input type="text" required formControlName="nomeUsuario" [class.error]="(formRegistrar.get('nomeUsuario')?.hasError('nomeUsuario') || formRegistrar.get('nomeUsuario')?.hasError('required')) && formRegistrar.get('nomeUsuario')?.touched">
+      </div>
+      <div class="input-container">
+        <label>Enter your email</label>
+        <input type="email" placeholder="example@email.com" required formControlName="email" [class.error]="(formRegistrar.get('email')?.hasError('email') || formRegistrar.get('email')?.hasError('required')) && formRegistrar.get('email')?.touched">
+      </div>
+      <div class="input-container">
+        <label>Senha</label>
+        <input [type]="inputShowPassword" required formControlName="senha" [class.error]="(formRegistrar.get('senha')?.hasError('senha') || formRegistrar.get('senha')?.hasError('required')) && formRegistrar.get('senha')?.touched">
+        <button class="mostrar-senha" (click)="mostrarSenha(1)">
+          <img src="../../../assets/Eye.svg" alt="">
+        </button>
+      </div>
+      <div class="input-container">
+        <label>Confirmar senha</label>
+        <input [type]="inputShowConfirmPassword" required id="confimar-senha" formControlName="confirmarSenha" [class.error]="((formRegistrar.get('confirmarSenha')?.hasError('confirmarSenha')) || (formRegistrar.get('confirmarSenha')?.hasError('required')) && formRegistrar.get('confirmarSenha')?.touched)
+        || (formRegistrar.get('senha')?.value == formRegistrar.get('confirmarSenha')?.value) && formRegistrar.get('confirmarSenha')?.touched">
+        <button class="mostrar-senha confirmar" (click)="mostrarSenha(2)">
+          <img src="../../../assets/Eye.svg" alt="">
+        </button>
+      </div>
+    </form>
+    <button routerLink="/login" class="btn-cadastrar">Cadastrar</button>
+  </div>
+</div>
