--- a/src/app/shared/_mixin.scss
+++ b/src/app/shared/_mixin.scss
@@ -7,3 +7,11 @@
   justify-content: center;
   align-items: center;
 }
+@mixin containerPadrao{
+  width: 100vw;
+  height: 100vh;
+  @include flexColumn;
+  align-items: center;
+  padding-top: 100px;
+  gap: 52px;
+}
