terminando modais de eventos

--- a/src/app/modals/evento/editar-evento/editar-evento.component.html
+++ b/src/app/modals/evento/editar-evento/editar-evento.component.html
@@ -1,1 +1,53 @@
-<p>editar-evento works!</p>
+<div class="container">
+  <h1>Editar evento</h1>
+  <form>
+    <div class="input-nome-evento div-input">
+      <label for="nomeEvento" class="titulo">Nome do evento</label>
+      <input type="text" id="nomeEvento">
+    </div>
+    <div class="data-hora ">
+      <div class="data div-input">
+        <label for="data" class="titulo">
+          Data
+        </label>
+        <input [matDatepicker]="datepicker" disabled>
+        <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
+        <mat-datepicker #datepicker disabled="false">
+          <mat-datepicker-actions>
+            <button mat-button matDatepickerCancel>Cancelar</button>
+            <button mat-raised-button matDatepickerApply>Aplicar</button>
+          </mat-datepicker-actions>
+        </mat-datepicker>
+      </div>
+      <div class="hora div-input">
+        <label for="hora" class="titulo">
+          Horário
+        </label>
+        <input type="time">
+      </div>
+    </div>
+    <!-- <div class="lembretes div-input">
+      <p class="titulo">lembretes</p>
+    </div> -->
+    <div class="descricao div-input">
+      <p class="titulo">Descrição</p>
+      <textarea name="descricao" id="descricao" maxlength="237"></textarea>
+    </div>
+    <div class="add-convidados div-input">
+      <div class="input-add-email">
+        <label for="email" class="titulo">Adicionar convidados</label>
+        <input type="email" id="email" placeholder="Email">
+        <img src="../../../../assets/add _ create.svg" alt="">
+      </div>   
+      <ul>
+        <div class="container-list">
+          <li>usuario 1</li>
+          <li>usuario 2</li>
+          <li>usuario 3</li>
+        </div>
+      </ul>
+    </div>
+  </form>
+  <button class="salvar" (click)="salvar()">Salvar</button>
+  <img class="close" src="../../../../assets/close _ cancel.svg" alt="" (click)="close()">
+</div>
