--- a/src/app/pages/recuperar-senha/recuperar-senha.component.html
+++ b/src/app/pages/recuperar-senha/recuperar-senha.component.html
@@ -1,1 +1,32 @@
-<p>recuperar-senha works!</p>
+<div class="container">
+  <div class="container-logo">
+    <!-- <img src="" alt="Logo"> -->
+    <div class="provisorio"></div>
+    <h1>Dayify</h1>
+  </div>
+  <div class="container-redefinir">
+    <h2>Redefinir Senha</h2>
+    <div class="container-redefinir-input">
+      <form>
+        <div class="campo-input">
+          <label for="email">Email</label>
+          <input type="email" id="email">
+        </div>
+        <div class="enviar-codigo">
+          <button class="botao-enviar-codigo">
+            Enviar código
+          </button>
+          <span>Disponível em 60s</span>
+        </div>
+        <div class="campo-input">
+          <label for="text">Código</label>
+          <input>
+        </div>
+
+      </form>
+    </div>
+    <button class="enviar">
+      Enviar
+    </button>
+  </div>
+</div>
