--- a/src/app/modals/evento/criar-evento/criar-evento.component.scss
+++ b/src/app/modals/evento/criar-evento/criar-evento.component.scss
@@ -1,8 +1,120 @@
-@import '../../../shared/mixin';
+@import "../../../shared/mixin";
 
-.container{
-  @include containerPadrao;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
   width: 512px;
-  height: 736px;
+  // height: 736px;
+  position: relative;
+  h1 {
+    font-size: 36px;
+    color: #424242;
+    margin-top: 3rem;
+  }
+  form {
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 0 auto;
+    .titulo {
+      font-size: 20px;
+      color: #424242;
+      text-align: start;
+    }
+    .div-input {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      input{
+        padding-left: 10px;
+      }
+    }
+    .input-nome-evento {
 
+      input { 
+        margin-top: 10px;
+        width: 320px;
+        height: 44px;
+      }
+    }
+    .data-hora{
+      display: flex;
+      justify-content: space-between;
+      .data{
+        position: relative;
+        input{
+          margin-top: 10px;
+          width: 140px;
+          height: 30px;
+        }
+        mat-datepicker-toggle{
+          position: absolute;
+          left: 100px;
+          bottom: -10px;
+        }
+      }
+      .hora{
+        width: 140px;
+        display: flex;
+        flex-direction: column;
+        input{
+          margin-top: 10px;
+          width: 70px;
+          height: 30px;
+          padding:0 10px;
+          font-size: 16px;
+        }
+      }
+    }
+    .descricao{
+      #descricao{
+        margin-top: 10px;
+        width: 315px;
+        height: 110px;
+        resize: none;
+        padding: 4px;
+        border: 1.5px solid  black;
+      }
+    }
+    .add-convidados{
+      position: relative;
+      input{
+        margin-top: 10px;
+        width: 320px;
+        height: 44;
+        padding: 10px;
+        font-size: 14px;
+        color: #424242;
+      }
+      img{
+        position: absolute;
+        right: 10px;
+        bottom: 7px;
+      }
+    }
+  }
+
+  .salvar {
+    background-color: #424242;
+    width: 159px;
+    height: 40px;
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    font-weight: normal;
+    margin-bottom: 3rem;
+    margin-top: 1rem;
+    cursor: pointer;
+  }
+  .close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+  }
 }
