--- a/src/app/modals/evento/detalhes-evento/detalhes-evento.component.html
+++ b/src/app/modals/evento/detalhes-evento/detalhes-evento.component.html
@@ -1,1 +1,40 @@
-<p>detalhes-evento works!</p>
+<div class="container">
+  <form>
+    <div class="input-nome-evento div-input">
+      <h1>Nome do evento test</h1>
+    </div>
+    <div class="data-hora ">
+      <div class="data div-input">
+        <h2 for="data" class="titulo">
+          Data
+        </h2>
+        <p>09/17/2024</p>
+      </div>
+      <div class="hora div-input">
+        <h2 for="hora" class="titulo">
+          Horário
+        </h2>
+        <p>20 : 30</p>
+      </div>
+    </div>
+    <!-- <div class="lembretes div-input">
+      <p class="titulo">lembretes</p>
+    </div> -->
+    <div class="descricao div-input">
+      <p class="titulo">Descrição</p>
+      <textarea name="descricao" id="descricao" maxlength="237" readonly>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit iure minima provident at dignissimos veritatis nihil molestias, eius eligendi voluptatem numquam facere laboriosam ducimus eveniet dolores distinctio placeat ipsam doloribus.</textarea>
+    </div>
+    <div class="convidados div-input">
+      <h2 for="email" class="titulo">Convidados</h2>
+      <ul>
+        <div class="container-list">
+          <li>usuario 1</li>
+          <li>usuario 2</li>
+          <li>usuario 3</li>
+        </div>
+      </ul>
+    </div>
+  </form>
+  <button class="Editar" (click)="openEditarEvento()">Editar Evento</button>
+  <img class="close" src="../../../../assets/close _ cancel.svg" alt="" (click)="close()">
+</div>
