--- a/src/app/modals/perfil/editar-perfil/editar-perfil.component.html
+++ b/src/app/modals/perfil/editar-perfil/editar-perfil.component.html
@@ -14,7 +14,7 @@
     <div class="input-container">
       <label for="email">Email</label>
       <input type="email" name="email" id="email" [readOnly]="emailReadonly">
-      <img src="../../../../assets/pen _ edit.svg" alt="">
+      <img src="../../../../assets/pen _ edit.svg" alt="" (click)="editarEmail()">
     </div>  
   </form>
   <button class="salvar" (click)="salvarEdicao()">Salvar</button>
