--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,9 +6,9 @@
       <div class="provisorio"></div>
     </div>
     <div class="icones">
-      <button class="notificacao" (click)="chamarModalNotificacao()">
+      <!-- <button class="notificacao" (click)="chamarModalNotificacao()">
         <img src="../../../assets/alarm _ notification _ message.svg" alt="">
-      </button>
+      </button> -->
       <button class="perfil" (click)="chamarModalPerfil()">
         <img src="../../../assets/user _ account _ profile.svg" alt="">
         @if(modalPefilOpen){
@@ -25,7 +25,7 @@
         <div class="evento">
           <h4>Nome do evento</h4>
           <p>14/05 - 15:00</p>
-          <button>Ver detalhes</button>
+          <button (click)="openDetalhes()">Ver detalhes</button>
         </div>
         <div class="evento">
           <h4>Nome do evento</h4>
