sistema de criar e editar evento

--- a/src/app/modals/evento/criar-evento/criar-evento.component.html
+++ b/src/app/modals/evento/criar-evento/criar-evento.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <h1>Criar novo evento</h1>
-  <form>
+  <form [formGroup]="formCriarEvento">
     <div class="input-nome-evento div-input">
       <label for="nomeEvento" class="titulo">Nome do evento</label>
-      <input type="text" id="nomeEvento">
+      <input type="text" id="nomeEvento" formControlName="nome">
     </div>
     <div class="data-hora ">
       <div class="data div-input">
         <label for="data" class="titulo">
           Data
         </label>
-        <input [matDatepicker]="datepicker" disabled>
+        <input [matDatepicker]="datepicker" formControlName="data" readonly>
         <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
         <mat-datepicker #datepicker disabled="false">
           <mat-datepicker-actions>
@@ -23,7 +23,7 @@
         <label for="hora" class="titulo">
           Horário
         </label>
-        <input type="time">
+        <input type="time" formControlName="horario">
       </div>
     </div>
     <!-- <div class="lembretes div-input">
@@ -31,13 +31,13 @@
     </div> -->
     <div class="descricao div-input">
       <p class="titulo">Descrição</p>
-      <textarea name="descricao" id="descricao" maxlength="237"></textarea>
+      <textarea name="descricao" id="descricao" maxlength="237" formControlName="descricao"></textarea>
     </div>
-    <div class="add-convidados div-input">
+    <!-- <div class="add-convidados div-input">
       <label for="email" class="titulo">Adicionar convidados</label>
-      <input type="email" id="email" placeholder="Email">
+      <input type="email" id="email" placeholder="Email" formControlName="email">
       <img src="../../../../assets/add _ create.svg" alt="">
-    </div>
+    </div> -->
   </form>
   <button class="salvar" (click)="salvar()">Salvar</button>
   <img class="close" src="../../../../assets/close _ cancel.svg" alt="" (click)="close()">
