--- a/src/app/modals/evento/editar-evento/editar-evento.component.html
+++ b/src/app/modals/evento/editar-evento/editar-evento.component.html
@@ -1,17 +1,17 @@
 <div class="container">
   <h1>Editar evento</h1>
-  <form>
+  <form [formGroup]="formEditarEvento">
     <div class="input-nome-evento div-input">
-      <label for="nomeEvento" class="titulo">Nome do evento</label>
-      <input type="text" id="nomeEvento">
+      <label for="nomeEvento" class="titulo" >{{salvarEvento[id].nome}}</label>
+      <input type="text" id="nomeEvento" [value]="salvarEvento[id].nome" formControlName="nome">
     </div>
     <div class="data-hora ">
       <div class="data div-input">
         <label for="data" class="titulo">
           Data
         </label>
-        <input [matDatepicker]="datepicker" disabled>
-        <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
+        <input [matDatepicker]="datepicker" readonly formControlName="data" >
+        <mat-datepicker-toggle matIconSuffix [for]="datepicker" ></mat-datepicker-toggle>
         <mat-datepicker #datepicker disabled="false">
           <mat-datepicker-actions>
             <button mat-button matDatepickerCancel>Cancelar</button>
@@ -23,7 +23,7 @@
         <label for="hora" class="titulo">
           Horário
         </label>
-        <input type="time">
+        <input type="time" formControlName="horario">
       </div>
     </div>
     <!-- <div class="lembretes div-input">
@@ -31,12 +31,12 @@
     </div> -->
     <div class="descricao div-input">
       <p class="titulo">Descrição</p>
-      <textarea name="descricao" id="descricao" maxlength="237"></textarea>
+      <textarea name="descricao" id="descricao" maxlength="237" formControlName="descricao" [value]="salvarEvento[id].descricao"></textarea >
     </div>
-    <div class="add-convidados div-input">
+    <!-- <div class="add-convidados div-input">
       <div class="input-add-email">
         <label for="email" class="titulo">Adicionar convidados</label>
-        <input type="email" id="email" placeholder="Email">
+        <input type="email" id="email" placeholder="Email" formControlName="email">
         <img src="../../../../assets/add _ create.svg" alt="">
       </div>   
       <ul>
@@ -46,7 +46,7 @@
           <li>usuario 3</li>
         </div>
       </ul>
-    </div>
+    </div> -->
   </form>
   <button class="salvar" (click)="salvar()">Salvar</button>
   <img class="close" src="../../../../assets/close _ cancel.svg" alt="" (click)="close()">
