--- a/src/app/modals/perfil/editar-perfil/editar-perfil.component.html
+++ b/src/app/modals/perfil/editar-perfil/editar-perfil.component.html
@@ -7,7 +7,7 @@
   </div>
   <form>
     <div class="input-container">
-      <label for="nome">Nome de usuário</label>
+      <label for="nome">Admin</label>
       <input type="text" name="nome" id="nome" [readOnly]="nomeReadonly">
       <img src="../../../../assets/pen _ edit.svg" alt="" (click)="editarNome()">
     </div>
