--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,8 +2,8 @@
 <div class="container">
   <header>
     <div class="container-logo">
-      <!-- <img src="" alt="Logo"> -->
-      <div class="provisorio"></div>
+      <img class="provisorio" src="../../../assets/reshot-icon-calendar-number-W85XU64MP9.svg" alt="Logo">
+      <!-- <div class="provisorio"></div> -->
     </div>
     <div class="icones">
       <!-- <button class="notificacao" (click)="chamarModalNotificacao()">
@@ -22,7 +22,7 @@
       <h1>Eventos</h1>
       <!--provisórios-->
       <div class="todos-eventos">
-        <div class="evento">
+        <!-- <div class="evento">
           <h4>Nome do evento</h4>
           <p>14/05 - 15:00</p>
           <button (click)="openDetalhes()">Ver detalhes</button>
@@ -41,7 +41,18 @@
           <h4>Nome do evento</h4>
           <p>14/05 - 15:00</p>
           <button>Ver detalhes</button>
-        </div>
+        </div> -->
+        @if(salvarOsEventos.length){
+          @for(evento of salvarOsEventos; track evento; let idx = $index){
+            <div class="evento">
+              <h4>{{ evento.nome }}</h4>
+              <p>{{ evento.data | date: 'dd/MM/yyyy'  }} - {{ evento.horario }}</p>
+              <button (click)="openDetalhes(idx)">Ver detalhes</button>
+            </div>
+          }
+        } @else {
+          <h2>Nenhum evento</h2>
+        }
       </div>
       <div class="btn-criar">
         <button class="criar-evento" (click)="openCriarEvento()">Criar evento</button>
