--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -12,7 +12,7 @@
       .provisorio {
         width: 126px;
         height: 126px;
-        border: 3px solid black;
+        // border: 3px solid black;
       }
     }
     .icones {
