--- a/src/app/pages/recuperar-senha/recuperar-senha.component.html
+++ b/src/app/pages/recuperar-senha/recuperar-senha.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="container-logo">
-    <!-- <img src="" alt="Logo"> -->
-    <div class="provisorio"></div>
+    <img class="provisorio" src="../../../assets/reshot-icon-calendar-number-W85XU64MP9.svg" alt="Logo">
+    <!-- <div class="provisorio"></div> -->
     <h1>Dayify</h1>
   </div>
   <div class="container-redefinir">
