--- a/src/app/pages/recuperar-senha/recuperar-senha.component.scss
+++ b/src/app/pages/recuperar-senha/recuperar-senha.component.scss
@@ -7,7 +7,8 @@
     .provisorio {
       width: 139px;
       height: 107px;
-      border: 3px solid black;
+        // border: 3px solid black;
+
     }
     h1 {
       font-size: 50px;
